--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+:root {
+  --mini-font-color: #B1B6CA;
+  --heading-color: #000;
+  --button-color: #083C6E;
+  --footer-color: #152242;
+}
+
 /* GENERAL */
 html {
   box-sizing: border-box;
@@ -16,9 +23,11 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: "Arial", sans-serif;
+  font-family: 'Rubik', "Arial", sans-serif;
   background-color: #fff;
-  color: #222;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 28px;
 }
 
 img {
@@ -39,9 +48,195 @@ img {
 
 /* CONTAINER */
 .container {
-  max-width: 1100px;
+  max-width: 1152px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 20px;
   padding-right: 20px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+
+
+/* FURNITURE-FOOTER */
+.furniture-footer {
+  position: relative;
+  padding-top: 367px;
+  padding-bottom: 31px;
+  background-color: var(--footer-color);
+}
+
+.furniture-footer__form-wrapper {
+  position: absolute;
+  top: -180px;
+  padding: 75px 162px 87px;
+  background-color: #F8F8F8;
+}
+
+.subscribe__title {
+  margin: 0 auto;
+  text-align: center;
+  width: 585px;
+}
+
+.subscribe__heading {
+  margin: 0;
+  margin-bottom: 25px;
+  padding: 0;
+  font-weight: 500;
+  font-size: 38px;
+  line-height: 48px;
+  color: var(--button-color);
+}
+
+.subscribe__heading::after {
+  font-family: 'Poppins';
+  display: block;
+  margin: 0 auto;
+  margin-top: 20px;
+  width: 154px;
+  height: 6px;
+  background-color: var(--button-color);
+  content: "";
+}
+
+.subscribe__text {
+  margin: 0;
+  margin-bottom: 40px;
+  padding: 0;
+  color: var(--mini-font-color);
+}
+
+.subscribe__form {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.subscribe__input {
+  padding: 18px;
+  padding-left: 30px;
+  width: 787px;
+  border: 1px solid #075DB0;
+}
+
+.subscribe__input::placeholder {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 16px;
+  text-transform: uppercase;
+  color: #706464;
+  opacity: 0.8;
+}
+
+.subscribe__button {
+  position: absolute;
+  right: 8px;
+  top: 6px;
+}
+
+.button {
+  padding: 15px 50px;
+  border: none;
+  box-sizing: content-box;
+  text-transform: uppercase;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+  color: #fff;
+  background-color: var(--button-color);
+}
+
+.footer__wrapper {
+  display: flex;
+}
+
+.footer__list {
+  margin: 0;
+  padding: 0;
+  width: 255px;
+  list-style: none;
+  margin-right: 30px;
+}
+
+.footer__item {
+  margin-bottom: 20px;
+}
+
+.footer__link {
+  font-family: 'Arial';
+  color: #fff;
+  font-weight: 350;
+  font-size: 18px;
+  line-height: 30px;
+  text-decoration: none;
+}
+
+.footer__need-help {
+  width: 255px;
+}
+
+.footer__wrapper h2 {
+  font-weight: 750;
+  font-size: 18px;
+  line-height: 30px;
+  color: #fff;
+}
+
+.footer__need-help p {
+  font-weight: 750;
+  font-size: 18px;
+  line-height: 30px;
+  color: #fff;
+}
+
+.footer__need-help address {
+  font-weight: 350;
+  font-size: 18px;
+  line-height: 30px;
+  color: #fff;
+}
+
+.footer__list-social {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  margin-top: 50px;
+  padding: 0;
+  list-style: none;
+}
+
+.footer__item-social {
+  margin-right: 30px;
+}
+
+path {
+  transition: fill 0.3s ease;
+}
+
+.footer__link-social:hover path {
+  fill: #C4C4C4;
+}
+
+.bank-list {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+}
+
+.bank-item {
+  margin-right: 12px;
+}
+
+hr {
+  margin-bottom: 31px;
+  border: 1px solid rgba(255, 255, 255, 0.15);
 }
